--- a/index.html
+++ b/index.html
@@ -118,21 +118,29 @@
   </header>
 
   <script>
-  // Charger le verset du jour depuis verses.json
-  fetch('verses.json')
-    .then(response => response.json())
-    .then(verses => {
-      const today = new Date();
-      const dayOfYear = Math.floor(
-        (today - new Date(today.getFullYear(), 0, 0)) / 1000 / 60 / 60 / 24
-      );
-      const verse = verses[dayOfYear % verses.length];
-      document.getElementById('verse').textContent = `${verse.reference} - ${verse.text}`;
-    })
-    .catch(error => {
-      console.error('Erreur lors du chargement du verset :', error);
-    });
-</script>
-
+        document.addEventListener("DOMContentLoaded", function () {
+            fetch("verses.json")
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error("Erreur lors du chargement du fichier JSON");
+                    }
+                    return response.json();
+                })
+                .then(data => {
+                    let today = new Date();
+                    let dayOfYear = Math.floor(
+                        (today - new Date(today.getFullYear(), 0, 0)) / 1000 / 60 / 60 / 24
+                    );
+                    let verseIndex = dayOfYear % data.length;
+                    document.getElementById("verse-text").textContent = 
+                        data[verseIndex].reference + " - " + data[verseIndex].text;
+                })
+                .catch(error => {
+                    console.error(error);
+                    document.getElementById("verse-text").textContent = 
+                        "Impossible de charger le verset du jour.";
+                });
+        });
+    </script>
 </body>
 </html>
