--- a/index.html
+++ b/index.html
@@ -114,33 +114,33 @@
   <header>
     <h1>Coeur Ouvert</h1>
     <p class="slogan">Espoir, écoute et lumière pour avancer chaque jour.</p>
-    <div id="daily-verse"></div>
+    <div id="daily-verse">Chargement du verset...</div>
   </header>
 
   <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            fetch("verses.json")
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error("Erreur lors du chargement du fichier JSON");
-                    }
-                    return response.json();
-                })
-                .then(data => {
-                    let today = new Date();
-                    let dayOfYear = Math.floor(
-                        (today - new Date(today.getFullYear(), 0, 0)) / 1000 / 60 / 60 / 24
-                    );
-                    let verseIndex = dayOfYear % data.length;
-                    document.getElementById("verse-text").textContent = 
-                        data[verseIndex].reference + " - " + data[verseIndex].text;
-                })
-                .catch(error => {
-                    console.error(error);
-                    document.getElementById("verse-text").textContent = 
-                        "Impossible de charger le verset du jour.";
-                });
+    document.addEventListener("DOMContentLoaded", function () {
+      fetch("verses.json")
+        .then(response => {
+          if (!response.ok) {
+            throw new Error("Erreur lors du chargement du fichier JSON");
+          }
+          return response.json();
+        })
+        .then(data => {
+          let today = new Date();
+          let dayOfYear = Math.floor(
+            (today - new Date(today.getFullYear(), 0, 0)) / 1000 / 60 / 60 / 24
+          );
+          let verseIndex = dayOfYear % data.length;
+          document.getElementById("daily-verse").textContent =
+            data[verseIndex].reference + " - " + data[verseIndex].texte;
+        })
+        .catch(error => {
+          console.error(error);
+          document.getElementById("daily-verse").textContent =
+            "Impossible de charger le verset du jour.";
         });
-    </script>
+    });
+  </script>
 </body>
 </html>
