--- a/temoignages.html
+++ b/temoignages.html
@@ -1,6 +1,6 @@
 <section id="form-temoignage" style="margin-bottom: 40px;">
   <h2>Partage ton témoignage</h2>
-  <form id="temoignage-form">
+  <form id="temoignage-form" action="https://formspree.io/f/meozvbgg" method="POST">
     <label for="temoignage-text">Ton témoignage *</label><br />
     <textarea id="temoignage-text" name="temoignage-text" rows="4" required style="width: 100%;"></textarea><br /><br />
 
