--- a/ressources.html
+++ b/ressources.html
@@ -136,6 +136,7 @@
       <li><a href="index.html">Accueil</a></li>
       <li><a href="coaching.html">Coaching Spirituel</a></li>
       <li><a href="ressources.html">Ressources</a></li>
+       <li><a href="temoignages.html">Témoignages</a></li>
     </ul>
   </nav>
 
