--- a/temoignages.html
+++ b/temoignages.html
@@ -1,3 +1,11 @@
+<nav>
+    <ul class="menu">
+      <li><a href="index.html">Accueil</a></li>
+      <li><a href="coaching.html">Coaching Spirituel</a></li>
+      <li><a href="ressources.html">Ressources</a></li>
+      <li><a href="temoignages.html">Témoignages</a></li>
+    </ul>
+  </nav>
 <section id="form-temoignage" style="margin-bottom: 40px;">
   <h2>Partage ton témoignage</h2>
   <form id="temoignage-form" action="https://formspree.io/f/meozvbgg" method="POST">
