--- a/temoignages.html
+++ b/temoignages.html
@@ -179,6 +179,7 @@
 
       <p id="form-message">Merci pour ton témoignage ! Il sera publié après validation.</p>
     </form>
+    <iframe src="https://docs.google.com/forms/d/e/TON_ID_FORM/viewform?embedded=true" width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0">Chargement…</iframe>
   </section>
 
   <script>
