--- a/temoignages.html
+++ b/temoignages.html
@@ -4,50 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Témoignages</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f9f9f9;
-        }
-        header {
-            background-color: #2c3e50;
-            color: white;
-            padding: 15px;
-            text-align: center;
-        }
-        h1 {
-            margin: 0;
-        }
-        .form-container {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 10px;
-            background: white;
-            box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-            border-radius: 8px;
-        }
-        iframe {
-            width: 100%;
-            border: none;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Partagez votre témoignage</h1>
-    </header>
 
-    <div class="form-container">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScAHLKTqSv6bd6hJEZ8hMBsg86k9Ubsii0pvPkP-M35q3AK-Q/viewform?embedded=true" 
-                width="640" 
-                height="689" 
-                frameborder="0" 
-                marginheight="0" 
+    <!-- Menu -->
+    <nav>
+        <ul>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="temoignages.html">Témoignages</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <h1>Témoignages inspirants</h1>
+        <p>Partage ton histoire pour encourager d'autres personnes. Tu peux choisir de rester anonyme.</p>
+
+        <!-- Formulaire Google Form -->
+        <h2>Partager ton témoignage</h2>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScAHLKTqSv6bd6hJEZ8hMBsg86k9Ubsii0pvPkP-M35q3AK-Q/viewform?embedded=true"
+                width="640"
+                height="800"
+                frameborder="0"
+                marginheight="0"
                 marginwidth="0">
-            Chargement…
+        Chargement…
         </iframe>
-    </div>
+
+        <!-- Liste des témoignages (Google Sheet) -->
+        <h2>Ce que les autres ont partagé</h2>
+        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTDeQ50_-ucoJK85WFTsM6E6YHHb6Z33smZy2glW_ULmjCU7zeywjC-yX3sr8BRB113CQbR99TC7_I1/pubhtml?widget=true&amp;headers=false"
+                width="100%"
+                height="600">
+        </iframe>
+    </main>
+
 </body>
 </html>
