--- a/coaching.html
+++ b/coaching.html
@@ -143,6 +143,7 @@
       <li><a href="coaching.html">Coaching Spirituel</a></li>
       <li><a href="ressources.html">Ressources</a></li>
        <li><a href="temoignages.html">Témoignages</a></li>
+      <li><a href="formulaire-temoignage.html">formulaire</a></li>
     </ul>
   </nav>
 
