--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <li><a href="index.html">Accueil</a></li>
       <li><a href="coaching.html">Coaching Spirituel</a></li>
       <li><a href="ressources.html">Ressources</a></li>
-      <li><a href="formulaire-temoignage.html">Témoigange</a></li>
+      <li><a href="formulaire-temoignage.html">Témoiganges</a></li>
     </ul>
   </nav>
 
