--- a/ressources.html
+++ b/ressources.html
@@ -136,7 +136,7 @@
       <li><a href="index.html">Accueil</a></li>
       <li><a href="coaching.html">Coaching Spirituel</a></li>
       <li><a href="ressources.html">Ressources</a></li>
-       <li><a href="temoignages.html">Témoignages</a></li>
+      <li><a href="formulaire-temoignage.html">Témoiganges</a></li>
     </ul>
   </nav>
 
