--- a/formulaire-temoignage.html
+++ b/formulaire-temoignage.html
@@ -3,73 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Partager mon témoignage</title>
+    <title>Témoignages</title>
+    <link rel="stylesheet" href="style.css"> <!-- Ton CSS principal -->
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f6f9;
             margin: 0;
             padding: 0;
+            background: #f9f9f9;
         }
-
         header {
             background-color: #2c3e50;
-            padding: 15px;
-            text-align: center;
+            padding: 10px 0;
         }
-
-        header h1 {
-            color: white;
+        nav ul {
+            list-style: none;
             margin: 0;
-            font-size: 24px;
+            padding: 0;
+            display: flex;
+            justify-content: center;
         }
-
+        nav ul li {
+            margin: 0 15px;
+        }
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        nav ul li a:hover {
+            text-decoration: underline;
+        }
         .container {
-            max-width: 800px;
-            margin: 30px auto;
-            background-color: white;
-            border-radius: 10px;
+            max-width: 900px;
+            margin: auto;
             padding: 20px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+            background: white;
+            box-shadow: 0px 2px 10px rgba(0,0,0,0.1);
         }
-
-        h2 {
+        h1 {
             text-align: center;
-            color: #34495e;
+            margin-bottom: 20px;
         }
-
         iframe {
             border: none;
             width: 100%;
-            height: 800px;
+            margin-bottom: 40px;
             border-radius: 8px;
         }
-
-        footer {
-            text-align: center;
-            padding: 15px;
-            font-size: 14px;
-            color: #7f8c8d;
+        .form-section, .sheet-section {
+            margin-bottom: 50px;
+        }
+        .sheet-section iframe {
+            height: 500px;
         }
     </style>
 </head>
 <body>
-   
+
     <header>
-        <h1>Plateforme de Témoignages</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Accueil</a></li>
+                <li><a href="about.html">À propos</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="formulaire-temoignage.html">Témoigner</a></li>
+            </ul>
+        </nav>
     </header>
 
     <div class="container">
-        <h2>Partage ton témoignage</h2>
-        <p style="text-align:center;color:#555;">Ce formulaire nous permet de recueillir et partager ton expérience pour encourager d’autres personnes.</p>
-        
-        <!-- Intégration Google Form -->
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScAHLKTqSv6bd6hJEZ8hMBsg86k9Ubsii0pvPkP-M35q3AK-Q/viewform?embedded=true" 
-        frameborder="0" marginheight="0" marginwidth="0">Chargement…</iframe>
+        <h1>Partagez votre témoignage</h1>
+
+        <div class="form-section">
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScAHLKTqSv6bd6hJEZ8hMBsg86k9Ubsii0pvPkP-M35q3AK-Q/viewform?embedded=true" width="640" height="800" frameborder="0" marginheight="0" marginwidth="0">Chargement…</iframe>
+        </div>
+
+        <h2>Vos témoignages publiés</h2>
+        <div class="sheet-section">
+            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTDeQ50_-ucoJK85WFTsM6E6YHHb6Z33smZy2glW_ULmjCU7zeywjC-yX3sr8BRB113CQbR99TC7_I1/pubhtml?widget=true&amp;headers=false" width="640" height="800"></iframe>
+        </div>
     </div>
 
-    <footer>
-        &copy; 2025 - Plateforme de Réhabilitation et Encouragement
-    </footer>
 </body>
 </html>
