--- a/formulaire-temoignage.html
+++ b/formulaire-temoignage.html
@@ -64,10 +64,10 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Accueil</a></li>
-                <li><a href="about.html">À propos</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="formulaire-temoignage.html">Témoigner</a></li>
+                <<li><a href="index.html">Accueil</a></li>
+                <li><a href="coaching.html">Coaching Spirituel</a></li>
+                <li><a href="ressources.html">Ressources</a></li>
+                <li><a href="formulaire-temoignage.html">Témoignages</a></li>
             </ul>
         </nav>
     </header>
